- added favicon in png format (it is somehow not showing at the moment) - we have to investigate, it probably causes the problem with cache? - refactored "admin"-role - there isn't sessionStorage anymore :) (use authService) - fixed the CSS for the nav-admin bar - the ".active" class was missing from the CSS file for displaying color of the current nav-item with its page - cleaned up admin (doc) - ceres will clean up the role situation tomorrow - optimized the name in the nav bar (more useful for the user) - Alle Rezepte - Meine Rezepte - ... instead of Manducare in the mix :) - add new function in the authService for getting the uuid of user from the firebase

--- a/src/app/admin/view-head-nav/nav-admin.component.less
+++ b/src/app/admin/view-head-nav/nav-admin.component.less
@@ -12,6 +12,8 @@
   color: #fff;
 }
 
+
+.active,
 .navbar-admin__link:hover,
 .navbar-admin__link:focus,
 .navbar-admin__link:active {
